<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/playerScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="left"
        android:padding="@dimen/padding"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/computerScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="right"
        android:padding="@dimen/padding"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/playerScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="left"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:text="@string/player_score"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/computerScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="right"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:text="@string/computer_score"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <ImageView
        android:id="@+id/dieImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_rowWeight="1"
        android:layout_gravity="center_horizontal|fill_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/spacing"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_1" />

    <TextView
        android:id="@+id/troughValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal|fill_horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/troughTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:text="@string/trough"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Button
        android:id="@+id/rollAgainButton"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_again"
        android:textColor="@color/button_text_color" />

    <Button
        android:id="@+id/holdButton"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="right"
        android:text="@string/hold"
        android:textColor="@color/button_text_color" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"

        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
</GridLayout>